--- a/HomieNodeManager/wwwroot/css/site.css
+++ b/HomieNodeManager/wwwroot/css/site.css
@@ -147,6 +147,24 @@ legend.outerborder {
     border-bottom: none;
 }
 
+legend.form-legend {
+    border-style: none;
+    border-width: 0;
+    padding-left:6px;
+    padding-right:6px;
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 0;
+    width:auto;
+}
+
+fieldset.form-fieldset {
+    border: 2px solid #888;
+    padding:10px;
+    -webkit-box-shadow: 0px 0px 0px 0px #000;
+    box-shadow: 0px 0px 0px 0px #000;
+    border-radius:10px;
+}
 
 
 
