--- a/HomieNodeManager/Shared/NavMenu.razor
+++ b/HomieNodeManager/Shared/NavMenu.razor
@@ -22,12 +22,12 @@
                 <span class="oi oi-dashboard" aria-hidden="true"></span> Node List
             </NavLink>
         </li>
-        @*<li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="mqttpeek">
+                <span class="oi oi-plus" aria-hidden="true"></span> MQTT Peek
             </NavLink>
         </li>
-        <li class="nav-item px-3">
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
